@startuml

class Application.Api.Controllers.ValidationController {
  +Get()
}
Application.Api.Controllers.ValidationController ---> Application.Domain.ValidationInteractor
Application.Api.Controllers.ValidationController ---> Application.Metrics.ITrace
class Application.Domain.ValidationInteractor {
  +Execute()
}
Application.Domain.ValidationInteractor ---> "2" Application.Domain.IGetMaximumQuery
class Application.Metrics.ITrace {
  +Add()
}
Application.Metrics.ITrace ---> Application.Metrics.Trace

interface Application.Domain.IGetMaximumQuery {
  GetMaximumQuery
}
class Application.Adapters.GetMaximumQuery {
  +Execute()
}
Application.Adapters.GetMaximumQuery ---> Application.Domain.IGetMaximumQuery
interface Application.Metrics.ITrace {
  TraceBuilder
}
class Application.Metrics.TraceBuilder {
  +Add()
}
Application.Metrics.TraceBuilder ---> Application.Metrics.ITrace

@enduml

